[project]
name = "cellm"
version = "0.0.0"
description = "Experiments with local learning instead of the global backpropagation."
authors = [{ name = "apehex", email = "17317183+apehex@users.noreply.github.com" }]
readme = ".github/README.md"
license = "AGPL-3.0"
license-files = [".github/LICENSE.md"]
requires-python = ">=3.10, <3.14"
dependencies = [
    "torch>=2.10",]

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.sdist]
include = ["cellm"]

[tool.hatch.build.targets.wheel]
include = ["cellm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
